# pvr.njoy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog  changelog.in  control  copyright  kodi-pvr-njoy.install  rules
pvr.njoy/: addon.xml  addon.xml.in  changelog.txt
pvr.njoy/resources/language/resource.language.af_za/: strings.po
pvr.njoy/resources/language/resource.language.am_et/: strings.po
pvr.njoy/resources/language/resource.language.ar_sa/: strings.po
pvr.njoy/resources/language/resource.language.ast_es/: strings.po
pvr.njoy/resources/language/resource.language.az_az/: strings.po
pvr.njoy/resources/language/resource.language.be_by/: strings.po
pvr.njoy/resources/language/resource.language.bg_bg/: strings.po
pvr.njoy/resources/language/resource.language.bs_ba/: strings.po
pvr.njoy/resources/language/resource.language.ca_es/: strings.po
pvr.njoy/resources/language/resource.language.cs_cz/: strings.po
pvr.njoy/resources/language/resource.language.cy_gb/: strings.po
pvr.njoy/resources/language/resource.language.da_dk/: strings.po
pvr.njoy/resources/language/resource.language.de_de/: strings.po
pvr.njoy/resources/language/resource.language.el_gr/: strings.po
pvr.njoy/resources/language/resource.language.en_au/: strings.po
pvr.njoy/resources/language/resource.language.en_nz/: strings.po
src/: N7Xml.cpp  N7Xml.h  client.cpp  client.h
(+58 files in other folders)
